<resources>
    <string name="app_name">Barber-Line</string>
    <string name="Barber_Line">Barber Line</string>
    <string name="search">Search</string>
    <string name="names_of_barbershops">Names of barbershops</string>
    <string name="paragon">Paragon</string>
    <string name="open_from_08_30_to_23_30">Open from 08:30 to 23:30</string>
    <string name="_9_ghazar_parpetsi_st_8">9 Ghazar Parpetsi St, 8</string>
    <string name="see_more">See more</string>
    <string name="top_barber_shops">Top Barber Shops</string>
    <string name="home">Home</string>
    <string name="book">Books</string>
    <string name="barbers">Barbers</string>
    <string name="settings">Settings</string>
    <string name="sargis">Sargis</string>
    <string name="_077_77_77_77">077–77–77–77</string>
    <string name="_000_00_00_00">000–00–00–00</string>
    <string name="top_barbers">Top Barbers</string>
    <string name="the_textured_crop">The Textured Crop</string>
    <string name="top_haircuts">Top Haircuts</string>
    <string name="PARAGON">PARAGON</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="click_to_register">Click to register</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="log_out">Log Out</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="edit_profile">Edit profile</string>
    <string name="favourites">Favourites</string>
    <string name="bank_cards">Bank Cards</string>
    <string name="news">News</string>
    <string name="about_the_developer">About the developer</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="remove_account">Remove account</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="_5_0">5.0 ★★★★★</string>
    <string name="_1_547">(1,547)</string>
    <string name="specialists">Specialists</string>
    <string name="reviews">Reviews</string>
    <string name="services">Services</string>
    <string name="sargis_xachatryan">Sargis Xachatryan</string>
    <string name="_5_0s">5.0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="haircut">ԿՏՐՎԱԾՔ ՄԿՐԱՏՈՎ / Haircut</string>
    <string name="profile">Profile</string>

    <string name="default_web_client_id">1:492134639446:android:dd9f16e7a0b63736fc18f7</string>

    <string name="map">Map</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="reset_password">Reset Password</string>
    <string name="change_photo">Change photo</string>
    <string name="about_you">About you</string>
    <string name="user">User</string>
    <string name="_374_00_00_0000">+374 00 00 0000</string>
    <string name="user_useryan_u_gmail_com">user.useryan.u@gmail.com</string>
    <string name="name_surname">Name Surname</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="create_account">Create account</string>
    <string name="log_in_or_sign_up">Log in or sign up</string>
    <string name="write_your_phone_number">Write your phone number</string>
    <string name="last_name">Last Name</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="reservations">Reservations</string>
    <string name="getting_there">Getting there</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="set_yourself_a_reminder">Set yourself a reminder</string>
    <string name="manage_appointment">Manage appointment</string>
    <string name="reschedule_or_cancel_your_appointment">Reschedule or cancel your appointment</string>
    <string name="venue_details">Venue details</string>
    <string name="thursday_3_april">Thursday 3 April</string>
    <string name="_10_00_am_9_00_pm">10:00 AM- 9:00 PM</string>
    <string name="user_useryan">User Useryan</string>
    <string name="report_an_issue">Report an issue</string>

</resources>