<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/paragonLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="13dp"
    android:background="@drawable/radius_16_dp"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/image"
        android:layout_width="260dp"
        android:layout_height="160dp"
        android:background="@drawable/radius_16_dp"
        android:clipToOutline="true"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/img_paragon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_radius_16_dp"
        android:backgroundTint="@color/gray"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingBottom="7dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
           android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/paragon"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:gravity="center"
            android:fontFamily="@font/poppins"
            android:text="@string/_9_ghazar_parpetsi_st_8"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>