<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/paragonLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="13dp"
    android:background="@drawable/radius_16_dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/container_vertical_card5"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="7dp"
        android:background="@drawable/frame_top_barbers"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/barber_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="5dp"
            android:clipToOutline="true"
            android:background="@drawable/radius100"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/img_sargis_paragon"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/sargis"
            android:textColor="#FF000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/workPlace"
            android:layout_width="145dp"
            android:layout_height="30dp"
            android:fontFamily="@font/poppins"
            android:gravity="center_horizontal"
            android:includeFontPadding="false"
            android:text="@string/paragon"
            android:textColor="#FF000000"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>