<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#242C3B"
    android:transitionName="sharedImageTransition"
    tools:context=".EditProfile.EditPasswordActivity">

    <!-- Top Section -->
    <FrameLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="18dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:fontFamily="@font/inter"
            android:gravity="center"
            android:onClick="ToEdit"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/cancel"
            android:textColor="#FFFFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_profile"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/name"
            android:textColor="#FFFFFFFF"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="end"
            android:fontFamily="@font/inter_semibold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/save"
            android:textColor="#FFFFFFFF"
            android:textSize="20sp" />
    </FrameLayout>

    <!-- About You Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top">

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:fontFamily="@font/inter_semibold"-->
<!--            android:layout_marginBottom="8dp"-->
<!--            android:text="@string/name"-->
<!--            android:textColor="@color/gray"-->
<!--            android:textSize="15sp" />-->

        <!-- Old Password Field -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/OldPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/inter"
                android:textColorHint="@color/gray"
                android:hint="@string/old_password"
                android:textSize="17sp" />
        </LinearLayout>

        <!-- New Password Field -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/NewPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColorHint="@color/gray"
                android:fontFamily="@font/inter"
                android:hint="@string/new_password"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </LinearLayout>

        <!-- Confirm Password Field -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ConfirmPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/inter"
                android:hint="@string/confirm_your_password"
                android:textColorHint="@color/gray"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
