<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/paragonLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/container_frame2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/barbershops_frame"
        android:paddingStart="16dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        tools:ignore="RtlSymmetry">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/img_paragon_logo" />

        <FrameLayout
            android:id="@+id/container_frame4"
            android:layout_width="220dp"
            android:layout_height="45dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:fontFamily="@font/poppins_bold"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/PARAGON"
                android:textColor="#FF00313F"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="21dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/_9_ghazar_parpetsi_st_8"
                android:textColor="#FF000000"
                android:textSize="14sp" />
        </FrameLayout>
    </FrameLayout>

</LinearLayout>
