<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="#242C3B"
    android:layout_height="match_parent"
    tools:context=".Activities.AboutDeveloperActivity">

    <!-- Top Section -->
    <FrameLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_arrow_left"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/app_name"
            android:onClick="ToHome"
            android:scaleType="centerInside"
            android:src="@drawable/img_arrow_left" />

        <TextView
            android:id="@+id/text_profile"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/profile"
            android:textColor="#FFFFFFFF"
            android:textSize="20sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/top"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/Firstname_LastnameText"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-4.5dp"
            android:layout_marginBottom="-4.5dp"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/name_surname"
            android:textColor="#FFFFFFFF"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:layout_gravity="center"
            android:layout_marginTop="1.5dp"
            android:layout_marginBottom="-3dp"
            android:fontFamily="@font/inter_semibold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/user_useryan_u_gmail_com"
            android:textColor="#FF9F9F9F"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/phoneNumberText"
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="46dp"
            android:layout_marginBottom="-3dp"
            android:fontFamily="@font/inter_semibold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:letterSpacing="0.01"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/_374_00_00_0000"
            android:textColor="#FF9F9F9F"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textGithub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="GitHub Profile"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textLinkedIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="LinkedIn Profile"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textCV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="View My CV"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>