<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="sharedImageTransition"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/container_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#242C3B"
        android:gravity=""
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/container_top_navigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="20dp"
            android:clipToPadding="false"
            android:gravity="center"
                android:orientation="horizontal">

            <ImageButton
                android:id="@+id/container_frame2"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:background="@drawable/img_back_home"
                android:contentDescription="@string/app_name"
                android:onClick="ToHome"
                android:scaleType="centerInside" />

            <TextView
                android:id="@+id/text_barber_time"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/Barber_Line"
                android:textColor="#FFFFFFFF"
                android:textSize="24sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_log_in"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_gravity="center"
            android:layout_marginTop="220dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/log_in"
            android:textColor="#FFFFFFFF"
            android:textSize="27sp" />

        <LinearLayout
            android:id="@+id/container_text_field1"
            android:layout_width="327dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/input"
            android:clipToPadding="false"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="12dp"
            android:paddingRight="16dp"
            android:paddingBottom="12dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="Phone Number"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textColor="@android:color/white"
                android:textColorHint="#FF8F9098"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_text_field2"
            android:layout_width="327dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/input"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="12dp"
            android:paddingRight="16dp"
            android:paddingBottom="12dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints="Password"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="#FF8F9098"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/image_password_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical|end"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/img_password_icon" />
        </LinearLayout>


        <TextView
            android:id="@+id/text_forgot_password"
            android:layout_width="327dp"
            android:layout_height="16dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="left"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/forgot_password"
            android:textColor="#FF006FFD"
            android:textSize="12sp" />

        <FrameLayout
            android:id="@+id/login_button"
            android:layout_width="327dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:onClick="login_button"
            android:textSize="12sp">

            <ImageView
                android:id="@+id/img_rectangle2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/img_login_button"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/txt_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/login"
                android:textColor="#FFFFFFFF"
                android:textSize="16sp" />
        </FrameLayout>

        <TextView
            android:id="@+id/text_register_now"
            android:layout_width="327dp"
            android:layout_height="16dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center_horizontal|center_vertical"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:singleLine="true"
            android:text="Click to register"
            android:textColor="#FF006FFD"
            android:textSize="12sp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>