<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#242C3B">

    <FrameLayout
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal">

            <!-- Specialists Section -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/white_bg"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingTop="7.5dp"
                android:paddingRight="16dp"
                android:paddingBottom="7.5dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerInside"
                    android:src="@drawable/specialists" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="21dp"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/plus_jakarta_sans_extrabold"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/specialists"
                    android:textColor="#FF363062"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- 3 Section -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingTop="7.5dp"
                android:paddingRight="16dp"
                android:paddingBottom="7.5dp">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerInside"
                    android:src="@drawable/scissors" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="21dp"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/plus_jakarta_sans_extrabold"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/services"
                    android:textColor="#FF8683A1"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- Reviews Section -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingTop="7.5dp"
                android:paddingRight="16dp"
                android:paddingBottom="7.5dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerInside"
                    android:src="@drawable/star_xml" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="21dp"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/plus_jakarta_sans_extrabold"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/reviews"
                    android:textColor="#FF8683A1"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>